--- a/gateway/gateway/src/main/resources/application.yml
+++ b/gateway/gateway/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 spring:
   config:
     import: optional:configserver:http://localhost:8888
+
   application:
-    name: discovery
+    name: gateway
+
